--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/gisinc2.css" id="theme">
+        <link rel="stylesheet" href="css/code-block.css">
 
 		<!-- Code syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -41,103 +42,73 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-      	            <h2>Five <em>easy</em> things <em>you</em> can do to write better code</h2>
+      	            <h2>GISi Dev Meet #1</h2>
+                    <h3>7/13/15</h3>
+                    <h3>Keep it <em>Short</em></h3>
 				</section>
                 <section>
-                    <section>
-                        <h2>Why do we care?</h2>
-                    </section>
-                    <section>
-                        <h2 class="fragment">Cost</h2>
-                        <ul>
-                            <li class="fragment">Adding new features</li>
-                            <li class="fragment">Reducing defects</li>
-                            <li class="fragment">Reusing code</li>
-                        </ul>
-                    </section>
-                    <section>
-                        <h2 class="fragment">Reputation</h2>
-                        <h3 class="fragment">People will read your code!</h3>
-                        <ul>
-                            <li class="fragment">Shared contracts</li>
-                            <li class="fragment">Subcontracts</li>
-                            <li class="fragment">Client dev teams</li>
-                        </ul>
-                    </section>
-                </section>
-                <section>
-                    <h2>What this talk is not about:</h2>
-                    <ul>
-                        <li class="fragment">
-                            <h3 class="fragment">Language</h3>
-                            <p class="fragment">C# / Javascript / Python / Avenue</p>
-                        </li>
-                        <li>
-                            <h3 class="fragment">Architecture</h3>
-                            <p class="fragment">MVC / MVP / MVVM / UI / BLL / DTO / DAL</p>
-                        </li>
-                        <li class="fragment">
-                            <h3 class="fragment">Tooling</h3>
-                            <p class="fragment">Git / Jira / Resharper</p>
-                        </li>
-                    </ul>
-                    <h2 class="fragment">These things won't save you!</h2>
-                </section>
-				<section>
-      	            <h1>What this talk is about:</h1>
-                    <p class="fragment">Fundamentals</p>
-                    <p class="fragment">Continuous Improvement</p>
-                    <p class="fragment">Reviewing your own code</p>
-			    </section>
-                <section>
-                    <h1>1. Choose meaningful names</h1>
-                    <section>
-                        <h1>Make them descriptive</h1>
-                    </section>
-                    <section>
-                        <h1>Context is (really) important</h1>
-                    </section>
-                    <section>
-                        <h1>Lean on your tools</h1>
-                        <p class="fragment">
-                            Refactor -> Rename
-                            Visual Studio:  (C-r, r)
-                            JetBrains: Shift + F6
-                        </p>
-                    </section>
-                </section>
-                <section>
-
-                    <section>
-                    <h1>2. Write shorter functions</h1>
+                    <h3>Write shorter functions</h3>
                     <p class="fragment">
                         No...seriously.  Shorter than that.
                     </p>
+                </section>
+                <section>
+                    <h3>Why?</h3>
+                    <ul>
+                        <li class="fragment">Easier to understand (30 second rule)</li>
+                        <li class="fragment">Easier to test</li>
+                        <li class="fragment">Code reuse</li>
+                        <li class="fragment">Big functions get bigger! (Change magnets)</li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>What?!?</h3>
+                    <pre class="code" style="max-height:600px;">
+                        <code class="javascript code" data-code="./code-samples/long.js" data-trim
+                              style="max-height:600px;"></code>
+                    </pre>
+                </section>
+                <section>
+                    <section>
+                        <h3>How?</h3>
+                        <p>Some things to look for:</p>
+                        <ul>
+                            <li class="fragment">Deep nesting (> 2 levels)</li>
+                            <li class="fragment">Complex Conditionals</li>
+                            <li class="fragment">Anonymous functions</li>
+                        </ul>
                     </section>
                     <section>
-                        <h1>Isolate individual cases</h1>
-                    </section>
-                    <section>
-                        <h1>Complex conditionals</h1>
+                        <h3>Deep Nesting</h3>
+                        <p>Extract loop bodies, conditional code paths</p>
                         <pre><code class="javascript">
-_checkClickLocation: function (clickEvent) {
-    if (this._mouseClickIsOutsideToolsContainer(containerPosition, clickEvent)) {
-        this._hideLayerTools();
-    }
-},
 
-_mouseClickIsOutsideToolsContainer: function (container, target) {
-    return target.x < container.x ||
-    target.x > container.x + container.w ||
-    target.y < container.y ||
-    target.y > container.y + container.h;
-}
+                        </code></pre>
+                        <pre><code class="javascript">
+
                         </code></pre>
                     </section>
                     <section>
-                        <h1>Avoid anonymous functions</h1>
+                        <h3>Complex conditionals</h3>
+                        <pre class="code">
+                            <code class="javascript"
+                                  data-code="./code-samples/complex-conditional-before.js" data-trim></code>
+                        </pre>
+                        <pre class="code">
+                            <code class="javascript code"
+                                  data-code="./code-samples/complex-conditional-after.js" data-trim></code>
+                        </pre>
                     </section>
-                    <section class="fragment">
+                    <section>
+                        <h3>Anonymous functions</h3>
+                        <p>Avoid them!</p>
+                    </section>
+                    <section>
+                        <ul>
+                            <li class="fragment">More than a screenful (~40 lines @ 1080)</li>
+                        </ul>
+                    </section>
+                    <section>
                         <h1>Lean on your tools</h1>
                         <p class="fragment">
                             Refactor -> Extract Method
@@ -147,15 +118,9 @@ _mouseClickIsOutsideToolsContainer: function (container, target) {
                             JetBrains: (C + Alt + m)
                         </p>
                     </section>
-                </section>
-                <section>
-                    <h1>3. Avoid side effects</h1>
-                </section>
-                <section>
-                    <h1>4. Refactor now (Always be refactoring)</h1>
-                </section>
-                <section>
-                    <h1>5. Automate</h1>
+                    <section>
+                        <h3>Resources</h3>
+                    </section>
                 </section>
 		    </div>
 
@@ -181,6 +146,7 @@ _mouseClickIsOutsideToolsContainer: function (container, target) {
 
 				// Optional reveal.js plugins
 				dependencies: [
+                    { src: './plugin/externalcode/externalcode.js', condition: function() { return !!document.querySelector( '[data-code]' ); } },
 					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
 					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
 					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
