Adds code samples

--- a/index.html
+++ b/index.html
@@ -101,7 +101,19 @@
                     </section>
                     <section>
                         <h3>Anonymous functions</h3>
-                        <p>Avoid them!</p>
+                        <pre class="code">
+                            <code class="javascript"
+                                  data-code="./code-samples/anon-before.js" data-trim
+                                  style="max-height:600px;"></code>
+                        </pre>
+                    </section>
+                    <section>
+                        <h3>Named functions</h3>
+                        <pre class="code">
+                            <code class="javascript code"
+                                  data-code="./code-samples/anon-after.js" data-trim
+                                  style="max-height:600px;"></code>
+                        </pre>
                     </section>
                     <section>
                         <ul>
