Adds more examples

--- a/index.html
+++ b/index.html
@@ -80,29 +80,34 @@
                     </section>
                     <section>
                         <h3>Deep Nesting</h3>
-                        <p>Extract loop bodies, conditional code paths</p>
-                        <pre><code class="javascript">
-
+                        <pre class="code"><code class="javascript code"
+                                                data-code="./code-samples/conditional-body-before.js" data-trim
+                                                style="max-height:600px;"></code>
                         </code></pre>
-                        <pre><code class="javascript">
-
+                    </section>
+                    <section>
+                        <pre class="code"><code class="javascript code"
+                                   data-code="./code-samples/conditional-body-after.js" data-trim
+                                   style="max-height:600px;"></code>
                         </code></pre>
                     </section>
                     <section>
                         <h3>Complex conditionals</h3>
                         <pre class="code">
-                            <code class="javascript"
-                                  data-code="./code-samples/complex-conditional-before.js" data-trim></code>
+                            <code class="javascript code"
+                                  data-code="./code-samples/complex-conditional-before.js" data-trim
+                                  style="max-height:600px;"></code>
                         </pre>
                         <pre class="code">
                             <code class="javascript code"
-                                  data-code="./code-samples/complex-conditional-after.js" data-trim></code>
+                                  data-code="./code-samples/complex-conditional-after.js" data-trim
+                                  style="max-height:600px;"></code>
                         </pre>
                     </section>
                     <section>
                         <h3>Anonymous functions</h3>
                         <pre class="code">
-                            <code class="javascript"
+                            <code class="javascript code"
                                   data-code="./code-samples/anon-before.js" data-trim
                                   style="max-height:600px;"></code>
                         </pre>
