--- a/index.html
+++ b/index.html
@@ -83,10 +83,20 @@
                 </section>
                 <section>
                     <h3>Response Codes</h3>
-                    <ul>
-                        <li class="fragment">200 OK!</li>
-                        <li class="fragment">4XX The client screwed something up</li>
-                        <li class="fragment">5XX The server screwed something up</li>
+                    <ul class="fragment">
+                        <li>200 OK!</li>
+                        <li>4xx Something's wrong with the client request</li>
+                        <li>5xx Something's wrong with the server</li>
+                    </ul>
+                    <p class="fragment">Use the right tool for the job!</p>
+                </section>
+                <section>
+                    <h3>Resources</h3>
+                    <ul class="fragment">
+                        <li><a href="http://restcookbook.com/HTTP%20Methods/options/">REST Cookbook</a></li>
+                        <li><a href="http://www.vinaysahni.com/best-practices-for-a-pragmatic-restful-api#restful">
+                            Best Practices for a Pragmatic Restful API
+                        </a></li>
                     </ul>
                 </section>
 		    </div>
