--- a/index.html
+++ b/index.html
@@ -47,11 +47,10 @@
                     <h3>HTTP Basics</h3>
 				</section>
                 <section>
-                    <h3>Creating an API over the Web</h3>
+                    <h3>Big Picture -- Creating a RESTful API via HTTP</h3>
                     <ul>
                         <li class="fragment">Verbs</li>
                         <li class="fragment">Response Codes</li>
-                        <li class="fragment">ETAGs, caching, flat vs. nested, etc. etc.</li>
                     </ul>
                 </section>
                 <section>
@@ -75,27 +74,72 @@
                     </ul>
                 </section>
                 <section>
+                    <h3>Something like:</h3>
+                    <pre class="code">
+                        <code class="csharp code" data-code="./code-samples/verbs_good.cs" data-trim
+                              style="max-height:600px; word-wrap: break-word;"></code>
+                    </pre>
+                </section>
+                <section>
+                    <h3>Yikes!</h3>
+                    <pre class="code">
+                        <code class="csharp code" data-code="./code-samples/verbs_bad.cs" data-trim
+                              style="max-height:600px; word-wrap: break-word;"></code>
+                    </pre>
+                    <p class="fragment">Get a REST client! (Webstorm, Postman, cUrl)</p>
+                </section>
+                <section>
                     <h3>Exceptions</h3>
                     <ul>
-                        <li class="fragment">URLs have a maximum length (POST for spatial queries)</li>
+                        <li class="fragment">URLs have a maximum length (POST for spatial queries vs GET)</li>
                         <li class="fragment">DELETE is often disabled at the server level</li>
                     </ul>
                 </section>
                 <section>
                     <h3>Response Codes</h3>
                     <ul class="fragment">
-                        <li>200 OK!</li>
+                        <li>2xx OK!</li>
                         <li>4xx Something's wrong with the client request</li>
                         <li>5xx Something's wrong with the server</li>
                     </ul>
                     <p class="fragment">Use the right tool for the job!</p>
                 </section>
                 <section>
+                <h3>Something like:</h3>
+                    <pre class="code">
+                        <code class="csharp code" data-code="./code-samples/codes_good.cs" data-trim
+                              style="max-height:600px; word-wrap: break-word;"></code>
+                    </pre>
+                </section>
+                <section>
+                    <h3>Yikes!</h3>
+                    <pre class="code">
+                        <code class="csharp code" data-code="./code-samples/codes_bad.cs" data-trim
+                              style="max-height:600px; word-wrap: break-word;"></code>
+                    </pre>
+                </section>
+                <section>
+                    <h3>On the client side...</h3>
+                    <pre class="code">
+                        <code class="javascript code" data-code="./code-samples/codes_js.js" data-trim
+                              style="max-height:600px; word-wrap: break-word;"></code>
+                    </pre>
+                    <p class="fragment">This WILL cause bugs!</p>
+                </section>
+                <section>
                     <h3>Resources</h3>
-                    <ul class="fragment">
-                        <li><a href="http://restcookbook.com/HTTP%20Methods/options/">REST Cookbook</a></li>
+                    <ul>
+                        <li><a href="http://www.jmarshall.com/easy/http/">
+                            James Marshall - HTTP Made Really Easy
+                        </a></li>
+                        <li><a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html">
+                            W3C - HTTP Status Codes
+                        </a></li>
+                        <li><a href="http://www.amazon.com/Patterns-Enterprise-Application-Architecture-Martin/dp/0321127420">
+                            Martin Fowler - Patterns of Enterprise Application Architecture
+                        </a></li>
                         <li><a href="http://www.vinaysahni.com/best-practices-for-a-pragmatic-restful-api#restful">
-                            Best Practices for a Pragmatic Restful API
+                            Vinay Sahni - Best Practices for a Pragmatic Restful API
                         </a></li>
                     </ul>
                 </section>
